<resources>
    <string name="app_name">Popular Movies</string>
    <string name="image_content_description">Image loading error</string>
    <string name="error_message">There was an error while loading the images please click refresh to try again</string>
    <string name="error_message_no_favourite">You do not have any favourite movies yet</string>
    <string name="menu_refresh">Refresh movies</string>

    <!-- Preferences resource values  -->
    <string-array name="popular_movie_choice_type_array">
        <item>popular</item>
        <item>top rated</item>
        <item>favourites</item>
    </string-array>
    <string name="pref_title">Sort by</string>
    <string name="popular_movie_choice_list_pref_key">list_pref_key</string>
    <string name="popular_movie_default_choice">popular</string>
    <string name="action_settings">Settings</string>
    <string name="grid_view_image_description">Movie Image</string>
    <string name="movie_id">Movie Id: </string>
    <string name="blank_text" />
    <string name="movie_title">Title: </string>
    <string name="movie_overview">Overview: </string>
    <string name="movie_rating">Rating: </string>
    <string name="movie_release_date">Release date: </string>
    <string name="toggle_favourite">MARK AS FAVOURITE</string>
    <string name="trailer_label">Trailers:</string>
    <string name="image_play_trailer">Play video</string>
    <string name="user_review_label">User reviews:</string>
    <string name="test_user_review">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Donec facilisis maximus dui, eget scelerisque turpis. Proin placerat mattis nisi,
        condimentum euismod nibh porta in. Donec gravida felis sed lectus tempor ultrices.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Aliquam risus odio, vestibulum at placerat a, suscipit sagittis leo.
        Vivamus id ipsum eu neque tristique scelerisque. Fusce quis luctus leo.
        Integer aliquet, risus ullamcorper lacinia viverra, lorem ipsum ultrices elit,
        facilisis maximus odio risus nec nisi.
    </string>
</resources>
